--- a/newspaper/index.html
+++ b/newspaper/index.html
@@ -58,6 +58,18 @@
         tr:hover {
             background-color: #e9e9e9;
         }
+
+        a {
+            color: blue; 
+        }
+
+        a:hover {
+            text-decoration: underline; 
+        }
+
+        a:visited {
+            color: blue; 
+        }
     </style>
 </head>
 <body>
