--- a/newspaper/index.html
+++ b/newspaper/index.html
@@ -77,7 +77,7 @@
     <div class="container">
         <h1>Navigating Influence of Digital Platforms on Democracies</h1>
         <h2>List of Newspaper</h2>
-        <p>This is the list of all newspaper publishers within the <a href="http://130.136.143.16:3000/d/e8e6b568-d8cc-4266-a811-64ef45315d4b/dashboard-newspaper?orgId=1" target="_blank">Newspaper dashboard</a>. Here you can find detailed information about each publisher, making it easier to navigate and browse the different publications available.</p>
+        <p>This is the list of all newspaper publishers within the <a href="http://130.136.143.16:3000/d/e8e6b568-d8cc-4266-a811-64ef45315d4b/dashboard-newspaper?orgId=1" target="_blank">Newspaper dashboard</a>. Here you can find detailed information about each newspaper, making it easier to navigate and browse the different publications available.</p>
 
         <table>
             <tr>
