--- a/gafamblogs/index.html
+++ b/gafamblogs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List of GAFAM Blogs Publishers</title>
+    <title>List of GAFAM Blogs</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,6 +58,19 @@
         tr:hover {
             background-color: #e9e9e9;
         }
+
+        /* Stile per il link */
+        a {
+            color: blue;
+        }
+
+        a:hover {
+            text-decoration: underline; 
+        }
+
+        a:visited {
+            color: blue; 
+        }
     </style>
 </head>
 <body>
@@ -65,7 +78,7 @@
     <div class="container">
         <h1>Navigating Influence of Digital Platforms on Democracies</h1>
         <h2>List of GAFAM Blogs Publishers</h2>
-        <p>This is the list of all GAFAM Blogs publishers within the dashboard. Here you can find detailed information about each publisher, making it easier to navigate and browse the different publications available.</p>
+        <p>This is the list of all GAFAM Blogs publishers within the <a href="http://130.136.143.16:3000/d/cdptlj4aq52wwa/dashboard-gafam-blogs?orgId=1" target="_blank">GAFAM Blogs dashboard.</a> Here you can find detailed information about each newspaper, making it easier to navigate and browse the different publications available.</p>
 
         <table>
             <tr>
